--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         
 
     </div>
-    <script defer src="scriptPage.js"></script>
+    <script src="./scriptPage.js"></script>
 </body>
 </html>
