--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="bottom-left">
                 <h4>Monthly Subscription</h4>
-                <p><span id="big">$29</span> per month</p>
+                <p><span id="big">$29</span> <span id="opacity">per month</span></p>
                 <p>Full access for less than $1 a day</p>
                 <button onclick="firstAlert()">SignUp</button>
             </div>
